Update header links (#64)

--- a/public/index.pug
+++ b/public/index.pug
@@ -39,7 +39,9 @@ html(lang="en-US")
         li(class="header__list-item")
           a(href="https://packagist.org/packages/simple-icons/simple-icons" rel="noopener") Packagist
         li(class="header__list-item")
-          a(href="https://github.com/simple-icons/simple-icons#readme" rel="noopener") About
+          a(href="https://www.jsdelivr.com/package/npm/simple-icons" rel="noopener") JSDelivr
+        li(class="header__list-item")
+          a(href="https://unpkg.com/browse/simple-icons/" rel="noopener") Unpkg
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
