--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -472,6 +472,8 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   background-color: var(--color-background-card);
   border-radius: var(--border-radius-large);
   box-shadow: 0px 0px 3px 0px var(--color-shadows);
+  contain-intrinsic-size: 0 11.25rem;
+  content-visibility: auto;
   display: flex;
   flex-direction: column;
   overflow: hidden;
