--- a/public/index.pug
+++ b/public/index.pug
@@ -45,6 +45,8 @@ html(lang="en-US")
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
+    div(class="sticky-header-shadow" aria-hidden)
+
     main(class="main" role="main")
       div(class="control")
         noscript Controls are only available when JavaScript is enabled.
