--- a/public/index.pug
+++ b/public/index.pug
@@ -42,6 +42,8 @@ html(lang="en-US")
           a(href="https://www.jsdelivr.com/package/npm/simple-icons" rel="noopener") JSDelivr
         li(class="header__list-item")
           a(href="https://unpkg.com/browse/simple-icons/" rel="noopener") Unpkg
+        li(class="header__list-item")
+          a(href="https://opencollective.com/simple-icons" rel="noopener") Donate
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
@@ -146,6 +148,8 @@ html(lang="en-US")
           by the #[a(href="https://github.com/simple-icons/simple-icons/graphs/contributors" rel="noopener") Simple Icons Contributors].
         p.
           Use #[a(href="https://github.com/simple-icons/simple-icons" rel="noopener") GitHub] for requests, corrections and contributions.
+        p.
+          Kindly supported by your donations at #[a(href="https://opencollective.com/simple-icons" rel="noopener") Open Collective].
       a(
         class="footer-share"
         rel="noopener"
