Add Open Collective (#73)
* Update index.pug

* Create FUNDING.yml

--- a/public/index.pug
+++ b/public/index.pug
@@ -146,6 +146,8 @@ html(lang="en-US")
           by the #[a(href="https://github.com/simple-icons/simple-icons/graphs/contributors" rel="noopener") Simple Icons Contributors].
         p.
           Use #[a(href="https://github.com/simple-icons/simple-icons" rel="noopener") GitHub] for requests, corrections and contributions.
+        p.
+          Kindly supported by your donations at #[a(href="https://opencollective.com/simple-icons" rel="noopener") Open Collective].
       a(
         class="footer-share"
         rel="noopener"
