--- a/public/index.pug
+++ b/public/index.pug
@@ -42,6 +42,8 @@ html(lang="en-US")
           a(href="https://www.jsdelivr.com/package/npm/simple-icons" rel="noopener") JSDelivr
         li(class="header__list-item")
           a(href="https://unpkg.com/browse/simple-icons/" rel="noopener") Unpkg
+        li(class="header__list-item")
+          a(href="https://github.com/simple-icons/simple-icons/blob/develop/DISCLAIMER.md" rel="noopener") Disclaimer
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
