--- a/public/index.pug
+++ b/public/index.pug
@@ -4,26 +4,25 @@ html(lang="en-US")
     meta(charset="UTF-8")
     meta(content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport")
     link(rel="preconnect" href="https://fonts.gstatic.com")
-    title Simple Icons
-    meta(name="description" content=`${iconCount} Free SVG icons for popular brands.`)
+    title #{pageTitle}
+    meta(name="description" content=pageDescription)
     meta(property="og:type" content="website")
-    meta(property="og:title" content="Simple Icons")
-    meta(property="og:description" content=`${iconCount} Free SVG icons for popular brands.`)
-    meta(property="og:url" content="https://simpleicons.org")
-    meta(property="og:site_name" content="Simple Icons")
-    meta(property="og:image" content="https://simpleicons.org/images/og.png")
+    meta(property="og:title" content=pageTitle)
+    meta(property="og:description" content=pageDescription)
+    meta(property="og:url" content=pageUrl)
+    meta(property="og:site_name" content=pageTitle)
+    meta(property="og:image" content=`${pageUrl}/images/og.png`)
     meta(name="twitter:card" content="summary_large_image")
-    meta(name="twitter:title" content="Simple Icons")
-    meta(name="twitter:description" content=`${iconCount} Free SVG icons for popular brands.`)
-    meta(name="twitter:domain" content="Simple Icons")
-    meta(name="twitter:image:src" content="https://simpleicons.org/images/og.png")
-    link(rel="icon" type="image/x-icon" href="https://simpleicons.org/images/favicon.ico")
-    link(rel="icon" type="image/x-icon" href="https://simpleicons.org/images/favicon.ico")
-    link(rel="icon" type="image/png" href="https://simpleicons.org/images/favicon.png")
-    link(rel="apple-touch-icon" href="https://simpleicons.org/images/apple-touch-icon.png")
-    link(rel="mask-icon" href="https://simpleicons.org/images/logo.svg" color="#111111")
+    meta(name="twitter:title" content=pageTitle)
+    meta(name="twitter:description" content=pageDescription)
+    meta(name="twitter:url" content=pageUrl)
+    meta(name="twitter:image:src" content=`${pageUrl}/images/og.png`)
+    link(rel="icon" type="image/x-icon" href=`${pageUrl}/images/favicon.ico`)
+    link(rel="icon" type="image/png" href=`${pageUrl}/images/favicon.png`)
+    link(rel="apple-touch-icon" href=`${pageUrl}/images/apple-touch-icon.png`)
+    link(rel="mask-icon" href=`${pageUrl}/images/logo.svg` color="#111111")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap")
-    link(rel="canonical" href="https://simpleicons.org/")
+    link(rel="canonical" href=pageUrl)
 
   body(class="no-js order-alphabetically")
     header(class="header" role="banner")
@@ -83,7 +82,7 @@ html(lang="en-US")
                 path(d="M12 4a1 1 0 0 1-1-1V1a1 1 0 0 1 2 0v2a1 1 0 0 1-1 1zM4.933 6.348a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414l-1.42-1.42a.999.999 0 1 0-1.414 1.414l1.42 1.42zM1 13h2a1 1 0 1 0 0-2H1a1 1 0 0 0 0 2zm19.486-8.072l3.221-3.221A.999.999 0 1 0 22.293.293l-3.221 3.221-1.42 1.42-2.19 2.19A5.955 5.955 0 0 0 12 6c-3.309 0-6 2.691-6 6 0 1.258.406 2.453 1.124 3.462l-2.105 2.105c-.026.021-.058.03-.083.055s-.033.056-.055.082l-1.368 1.368-.001.002-3.219 3.219a.999.999 0 1 0 1.414 1.414l3.987-3.987a10.03 10.03 0 0 0 6.332 2.262c5.103-.001 9.473-3.902 9.951-9.081a1 1 0 0 0-1.591-.896 5.96 5.96 0 0 1-7.037.06l5.717-5.716 1.42-1.421zm-.945 9.78c-1.21 3.337-4.564 5.587-8.257 5.238a8.019 8.019 0 0 1-4.165-1.651l4.802-4.802c.05.038.093.082.144.12a7.955 7.955 0 0 0 7.476 1.095zm-10.979-.684A3.968 3.968 0 0 1 8 12c0-2.206 1.794-4 4-4a3.98 3.98 0 0 1 2.025.561l-5.463 5.463z")
 
       ul(class="grid")
-        li(class="grid-item--if-empty hidden" aria-hidden)
+        li(class="grid-item--if-empty hidden" aria-hidden="true")
           p Icon missing? #[a(href="https://github.com/simple-icons/simple-icons/issues/new?template=icon_request.md" rel="noopener") Submit a request]
 
         //- This script adds an extra element after itself.
