--- a/public/index.pug
+++ b/public/index.pug
@@ -40,7 +40,7 @@ html(lang="en-US")
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
-    div(class="sticky-header-shadow" aria-hidden)
+    div(class="sticky-header-shadow" aria-hidden="true")
 
     main(class="main")
       div(class="control")
@@ -48,7 +48,7 @@ html(lang="en-US")
         div(class="control-field search")
           label(class="control-field__title" for="search-input") Search
           div(class="search__wrapper")
-            div(id="search-clear" class="hidden" aria-hidden) &times;
+            div(id="search-clear" class="hidden" aria-hidden="true") &times;
             input(
               id="search-input"
               class="control__input"
@@ -65,7 +65,7 @@ html(lang="en-US")
             button(id="order-color" class="control__button" title="Sort by color" disabled)
               svg(role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                 path(d="M9.219 18.857H6.648V.429A.414.414 0 0 0 6.219 0H3.648a.418.418 0 0 0-.308.121.418.418 0 0 0-.121.308v18.428H.648a.4.4 0 0 0-.402.268c-.071.17-.04.326.094.469l4.286 4.287c.098.08.2.119.308.119a.447.447 0 0 0 .308-.119l4.272-4.273a.506.506 0 0 0 .134-.32.417.417 0 0 0-.429-.431zm3-15.428h3.429A.412.412 0 0 0 16.076 3V.429A.416.416 0 0 0 15.648 0h-3.429a.414.414 0 0 0-.429.429V3a.414.414 0 0 0 .429.429zm0 6.857h6a.42.42 0 0 0 .309-.12.42.42 0 0 0 .121-.308V7.286a.418.418 0 0 0-.121-.308.417.417 0 0 0-.309-.121h-6a.414.414 0 0 0-.308.121.417.417 0 0 0-.12.308v2.572c0 .125.04.228.12.308a.42.42 0 0 0 .308.12zm0 6.857h8.572c.125 0 .229-.039.309-.119s.119-.184.119-.309v-2.572c0-.125-.039-.227-.119-.307s-.184-.121-.309-.121h-8.572a.418.418 0 0 0-.308.121.415.415 0 0 0-.12.307v2.572c0 .125.04.229.12.309.081.08.183.119.308.119zm11.451 3.55a.408.408 0 0 0-.307-.121H12.219a.416.416 0 0 0-.429.428v2.572c0 .125.04.227.121.309a.42.42 0 0 0 .308.119h11.144a.414.414 0 0 0 .307-.119.424.424 0 0 0 .121-.309V21a.416.416 0 0 0-.121-.307z")
-            button(id="order-relevance" class="control__button hidden" title="Sort by relevance" aria-hidden disabled)
+            button(id="order-relevance" class="control__button hidden" title="Sort by relevance" aria-hidden="true" disabled)
               svg(role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                 path(d="M9.219 18.857H6.648V.429A.414.414 0 0 0 6.25 0H3.648a.416.416 0 0 0-.429.429v18.428H.648a.397.397 0 0 0-.402.268c-.071.17-.04.326.094.469l4.286 4.287c.098.08.2.119.308.119a.446.446 0 0 0 .308-.119l4.272-4.273a.5.5 0 0 0 .134-.318.418.418 0 0 0-.402-.432l-.027-.001zM22.971 4.984a.817.817 0 0 0 .207-.843.822.822 0 0 0-.666-.561l-2.777-.403a.366.366 0 0 1-.274-.199L18.22.459A.818.818 0 0 0 17.479 0a.816.816 0 0 0-.737.458l-1.243 2.519a.362.362 0 0 1-.273.199l-2.781.404a.816.816 0 0 0-.665.56.815.815 0 0 0 .207.843l2.012 1.96a.364.364 0 0 1 .104.322l-.475 2.769a.802.802 0 0 0 .18.667.832.832 0 0 0 1.016.201l2.486-1.307a.369.369 0 0 1 .339 0l2.485 1.307a.815.815 0 0 0 1.017-.2.811.811 0 0 0 .18-.667l-.475-2.768a.366.366 0 0 1 .104-.322l2.011-1.961zm-.005 13a.825.825 0 0 0-.457-1.405l-2.777-.404a.366.366 0 0 1-.274-.199l-1.241-2.518a.82.82 0 0 0-1.476 0l-1.242 2.518a.362.362 0 0 1-.275.199l-2.775.404a.816.816 0 0 0-.666.561.819.819 0 0 0 .207.844l2.011 1.961a.36.36 0 0 1 .104.322l-.475 2.769a.813.813 0 0 0 .328.806.82.82 0 0 0 .865.063l2.484-1.307a.367.367 0 0 1 .341 0l2.485 1.307a.822.822 0 0 0 1.193-.869l-.478-2.769a.371.371 0 0 1 .104-.322l2.014-1.961zm-2.092 5.131a.355.355 0 0 1-.145.354.356.356 0 0 1-.385.029l-2.487-1.309a.817.817 0 0 0-.767.002l-2.485 1.307a.353.353 0 0 1-.382-.029.354.354 0 0 1-.146-.354l.479-2.77a.83.83 0 0 0-.236-.729l-2.014-1.96a.35.35 0 0 1-.092-.371.36.36 0 0 1 .295-.249l2.778-.403a.815.815 0 0 0 .618-.448l1.242-2.521a.357.357 0 0 1 .326-.202c.144 0 .265.075.328.202l1.242 2.521c.117.241.35.41.617.448l2.78.403c.14.021.249.113.292.249a.35.35 0 0 1-.092.371l-2.01 1.96a.827.827 0 0 0-.235.729l.479 2.77z")
         div(class="control-field")
