Add license link to `<head>`
Add a license link to the website header, and include LICENSE.md
in the build. I chose to rename the license to 'license.txt" in the
build to prevent browsers from trying to download the .md file.

--- a/public/index.pug
+++ b/public/index.pug
@@ -22,6 +22,7 @@ html(lang="en-US")
     link(rel="apple-touch-icon" href=`${pageUrl}/images/apple-touch-icon.png`)
     link(rel="mask-icon" href=`${pageUrl}/images/logo.svg` color="#111111")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap")
+    link(rel="license" href="license.txt")
     link(rel="canonical" href=pageUrl)
 
   body(class="no-js order-alphabetically")
