--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  outline: 0;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 :root {
@@ -188,6 +191,7 @@ body.dark .icon-preview {
 body {
   background-color: var(--color-background);
   color: var(--color-text-default);
+  line-height: 1;
   display: flex;
   flex-direction: column;
   min-height: 100%;
@@ -197,7 +201,11 @@ button {
   background: none;
   border: none;
   cursor: pointer;
-  outline: 0;
+}
+
+ol,
+ul {
+  list-style: none;
 }
 
 a {
@@ -245,7 +253,6 @@ a {
   flex-wrap: wrap;
   float: right;
   justify-content: flex-end;
-  list-style: none;
   margin: 0.2rem 0 0;
 }
 @media (max-width: 640px) {
@@ -363,7 +370,6 @@ body.no-js .control-field__title {
 
 .control__input {
   font-family: var(--font-family-stylized);
-  outline: 0;
   padding: 0.4rem 2rem 0.4rem 0.8rem;
   width: 100%;
 }
@@ -467,7 +473,6 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   --grid-width: 13rem;
 
   display: grid;
-  list-style: none;
   gap: 0.75rem;
   grid-template-columns: repeat(auto-fill, minmax(var(--grid-width), 1fr));
   margin: 0 0 1.5rem;
@@ -604,7 +609,6 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   font-family: var(--font-family-stylized);
   font-size: 0.75rem;
   font-weight: 600;
-  outline: none;
   padding: 8px;
   text-align: center;
 }
@@ -622,7 +626,6 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   box-shadow: none;
   grid-column: -3 / -1;
   grid-row: span 2;
-  padding: 0;
   text-align: center;
 }
 @media (max-width: 1280px) {
