--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,14 +1,14 @@
 * {
+  border: 0;
   box-sizing: border-box;
   font: inherit;
+  font-size: 100%;
   margin: 0;
-  outline: 0;
   padding: 0;
   vertical-align: baseline;
 }
 
 :root {
-  font-size: 100%;
   height: 100%;
   min-width: 280px;
 
@@ -201,6 +201,7 @@ button {
   background: none;
   border: none;
   cursor: pointer;
+  outline: none;
 }
 
 ol,
@@ -370,6 +371,7 @@ body.no-js .control-field__title {
 
 .control__input {
   font-family: var(--font-family-stylized);
+  outline: none;
   padding: 0.4rem 2rem 0.4rem 0.8rem;
   width: 100%;
 }
@@ -609,6 +611,7 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   font-family: var(--font-family-stylized);
   font-size: 0.75rem;
   font-weight: 600;
+  outline: none;
   padding: 8px;
   text-align: center;
 }
