Add link to DISCLAIMER.md (#74)

--- a/public/index.pug
+++ b/public/index.pug
@@ -38,6 +38,8 @@ html(lang="en-US")
           a(href="https://www.jsdelivr.com/package/npm/simple-icons") JSDelivr
         li(class="header__list-item")
           a(href="https://unpkg.com/browse/simple-icons/") Unpkg
+        li(class="header__list-item")
+          a(href="https://github.com/simple-icons/simple-icons/blob/develop/DISCLAIMER.md") Disclaimer
       h1(class="header__title") Simple Icons
       p(class="header__description") #{iconCount} Free #[abbr(title="Scalable Vector Graphic") SVG] icons for popular brands
 
