aplied reset to ::before & ::after pseudo classes

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   border: 0;
   box-sizing: border-box;
   font: inherit;
@@ -194,7 +196,7 @@ body {
   display: flex;
   flex-direction: column;
   line-height: 1.4;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 button {
