--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,11 +1,16 @@
-* {
+*,
+*::before,
+*::after {
+  border: 0;
   box-sizing: border-box;
+  font: inherit;
+  font-size: 100%;
   margin: 0;
   padding: 0;
+  vertical-align: baseline;
 }
 
 :root {
-  font-size: 100%;
   height: 100%;
   min-width: 280px;
 
@@ -190,14 +195,19 @@ body {
   color: var(--color-text-default);
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  line-height: 1.4;
+  min-height: 100vh;
 }
 
 button {
   background: none;
-  border: none;
   cursor: pointer;
-  outline: 0;
+  outline: none;
+}
+
+ol,
+ul {
+  list-style: none;
 }
 
 a {
@@ -245,7 +255,6 @@ a {
   flex-wrap: wrap;
   float: right;
   justify-content: flex-end;
-  list-style: none;
   margin: 0.2rem 0 0;
 }
 @media (max-width: 640px) {
@@ -363,7 +372,7 @@ body.no-js .control-field__title {
 
 .control__input {
   font-family: var(--font-family-stylized);
-  outline: 0;
+  outline: none;
   padding: 0.4rem 2rem 0.4rem 0.8rem;
   width: 100%;
 }
@@ -467,7 +476,6 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   --grid-width: 13rem;
 
   display: grid;
-  list-style: none;
   gap: 0.75rem;
   grid-template-columns: repeat(auto-fill, minmax(var(--grid-width), 1fr));
   margin: 0 0 1.5rem;
@@ -622,7 +630,6 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   box-shadow: none;
   grid-column: -3 / -1;
   grid-row: span 2;
-  padding: 0;
   text-align: center;
 }
 @media (max-width: 1280px) {
@@ -798,7 +805,6 @@ body.order-by-relevance .grid-item {
 }
 
 #copy-input.hidden {
-  border: 0;
   display: block !important;
   height: 0;
   width: 0;
