Update search input (#85)
* Set input type of search input to "search"

Set the input type of the search input to "search", add an event
listener to it that blurs the input on the "search" event (which,
importantly hides the keyboard on mobile devices) and add a test for
that event listener.

Drawbacks:

- The search event is not official and therefor not supported in all
  browsers [1].
- Some browsers add a "clear search" button natively, but not all...

--
1. https://developer.mozilla.org/en-US/docs/Web/API/HTMLInputElement/search_event

* Replace "search" event by "change" event

Which seems to have the same behaviour (on type=search inputs, but is
more widely supported.

* Hide browser-inserted "x" from search input

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -438,6 +438,19 @@ body.no-js .control-field__title {
   background-color: transparent;
 }
 
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
+input[type='search']::-ms-clear,
+input[type='search']::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
 /* Control - order */
 
 body.order-alphabetically #order-alpha,
