--- a/public/index.pug
+++ b/public/index.pug
@@ -55,7 +55,7 @@ html(lang="en-US")
             input(
               id="search-input"
               class="control__input"
-              type="text"
+              type="search"
               placeholder="Search by brand..."
               disabled
             )
