Revert "lowercased npm per issue #101"
This reverts commit 7cb28a2df3d319bc630211235665aec9289a8daf.

--- a/public/index.pug
+++ b/public/index.pug
@@ -31,7 +31,7 @@ html(lang="en-US")
         li(class="header__list-item")
           a(href="https://github.com/simple-icons/simple-icons") GitHub
         li(class="header__list-item")
-          a(href="https://www.npmjs.com/package/simple-icons") npm
+          a(href="https://www.npmjs.com/package/simple-icons") NPM
         li(class="header__list-item")
           a(href="https://packagist.org/packages/simple-icons/simple-icons") Packagist
         li(class="header__list-item")
