--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -41,7 +41,6 @@
   --dm-color-button-text-hover: rgb(0, 0, 0);
   --dm-color-disabled: rgb(170, 170, 170);
   --dm-color-grid-item-divider: rgb(64, 64, 64);
-  --dm-color-menu-icon: rgb(212, 212, 212);
   --dm-color-shadow: rgba(75, 75, 75, 0.95);
   --dm-color-link: rgb(0, 100, 238);
   --dm-color-link-hover: rgb(0, 72, 238);
@@ -64,7 +63,6 @@
   --lm-color-button-text-hover: rgb(255, 255, 255);
   --lm-color-disabled: rgb(170, 170, 170);
   --lm-color-grid-item-divider: rgb(204, 204, 204);
-  --lm-color-menu-icon: rgb(51, 51, 51);
   --lm-color-shadow: rgba(0, 0, 0, 0.5);
   --lm-color-link: rgb(0, 0, 238);
   --lm-color-link-hover: rgb(52, 52, 238);
@@ -106,7 +104,6 @@
     --color-button-text-hover: var(--dm-color-button-text-hover);
     --color-disabled: var(--dm-color-disabled);
     --color-grid-item-divider: var(--dm-color-grid-item-divider);
-    --color-menu-icon: var(--dm-color-menu-icon);
     --color-shadows: var(--dm-color-shadow);
     --color-link: var(--dm-color-link);
     --color-link-hover: var(--dm-color-link-hover);
@@ -135,7 +132,6 @@
     --color-button-text-hover: var(--lm-color-button-text-hover);
     --color-disabled: var(--lm-color-disabled);
     --color-grid-item-divider: var(--lm-color-grid-item-divider);
-    --color-menu-icon: var(--lm-color-menu-icon);
     --color-shadows: var(--lm-color-shadow);
     --color-link: var(--lm-color-link);
     --color-link-hover: var(--lm-color-link-hover);
@@ -160,7 +156,6 @@ body.dark {
   --color-button-text-hover: var(--dm-color-button-text-hover);
   --color-disabled: var(--dm-color-disabled);
   --color-grid-item-divider: var(--dm-color-grid-item-divider);
-  --color-menu-icon: var(--dm-color-menu-icon);
   --color-shadows: var(--dm-color-shadow);
   --color-link: var(--dm-color-link);
   --color-link-hover: var(--dm-color-link-hover);
@@ -183,7 +178,6 @@ body.light {
   --color-button-text-hover: var(--lm-color-button-text-hover);
   --color-disabled: var(--lm-color-disabled);
   --color-grid-item-divider: var(--lm-color-grid-item-divider);
-  --color-menu-icon: var(--lm-color-menu-icon);
   --color-shadows: var(--lm-color-shadow);
   --color-link: var(--lm-color-link);
   --color-link-hover: var(--lm-color-link-hover);
@@ -277,7 +271,7 @@ a {
   padding: 8px;
   margin: 6px;
   background-color: var(--color-background);
-  fill: var(--color-menu-icon);
+  fill: var(--color-button-active);
 }
 
 .header__list-item:hover,
@@ -285,7 +279,7 @@ a {
   cursor: pointer;
   margin: 6px;
   fill: var(--color-background);
-  background-color: var(--color-menu-icon);
+  background-color: var(--color-button-active);
   border-radius: 10%;
 }
 
