--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -284,7 +284,7 @@ a {
   height: 55px;
   width: 55px;
   display: inline-block;
-  fill: inherit;
+  fill: var(--color-button-active);
 }
 
 /* Main */
