Converted menu links into logos (#99)

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -264,16 +264,27 @@ a {
     margin: 0 0 1rem;
   }
 }
-
 .header__list-item {
-  font-family: var(--font-family-stylized);
-  font-size: 1rem;
-  font-weight: 600;
-  margin: 0 0.7rem;
+  height: 55px;
+  width: 55px;
+  background-color: var(--color-background);
+  fill: var(--color-button-active);
 }
-.header__list-item:hover {
-  color: var(--color-button-hover);
-  text-decoration: underline;
+
+.header__list-icon:hover,
+.header__list-icon:focus {
+  cursor: pointer;
+  fill: var(--color-background);
+  background-color: var(--color-button-active);
+  border-radius: var(--border-radius-large);
+}
+
+.header__list-icon {
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+  display: inline-block;
+  fill: var(--color-button-active);
 }
 
 /* Main */
