adding link to website repository

--- a/public/index.pug
+++ b/public/index.pug
@@ -175,5 +175,7 @@ html(lang="en-US")
           title Twitter logo
           path(d=twitterIcon.path)
         span Share this on Twitter!
-
+      div(class="footer-repo")
+          p. 
+            #[a(href="https://github.com/simple-icons/simple-icons-website") Made with ❤️ on GitHub]
     input(id="copy-input" class="hidden" aria-hidden="true")
