--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -748,6 +748,7 @@ body.order-by-relevance .grid-item {
   .footer .footer-share {
     flex-grow: 1;
     justify-content: center;
+    margin-bottom: 0.3rem;
   }
 }
 .footer .footer-share:focus,
@@ -759,6 +760,23 @@ body.order-by-relevance .grid-item {
   fill: #fff;
   height: 1rem;
   margin-right: 0.75rem;
+}
+
+.footer-repo {
+  flex: 0 0 100%;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.footer-repo a {
+  font-weight: 600;
+}
+
+.footer-repo a:focus,
+.footer-repo a:hover {
+  color: var(--color-button-hover);
+  text-decoration: underline;
 }
 
 /* .copy-button */
