--- a/public/index.pug
+++ b/public/index.pug
@@ -177,5 +177,5 @@ html(lang="en-US")
         span Share this on Twitter!
       div(class="footer-repo")
           p. 
-            #[a(href="https://github.com/simple-icons/simple-icons-website") Made with ❤️ on GitHub]
+            #[a(title="github repository" href="https://github.com/simple-icons/simple-icons-website") Made with ❤️ on GitHub]
     input(id="copy-input" class="hidden" aria-hidden="true")
