--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -465,6 +465,7 @@ input[type='search']::-ms-reveal {
 /* Control - order */
 
 body.order-alphabetically #order-alpha,
+body.download-svg #download-svg,
 body.order-by-color #order-color,
 body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
@@ -474,8 +475,31 @@ body.order-by-relevance #order-relevance {
   fill: var(--color-background);
 }
 
-/* Control - color */
+/* Download type */
+body.download-svg a.download-svg,
+body.download-pdf a.download-pdf {
+  display: inline;
+}
 
+body:not(.download-svg) a.download-svg,
+body:not(.download-pdf) a.download-pdf {
+  display: none;
+}
+
+.grid-item__download-button {
+  display: inline-block;
+  fill: var(--color-button-active);
+}
+
+.grid-item__download-button:hover,
+.grid-item__download-button:focus {
+  fill: var(--color-background);
+  background-color: var(--color-button-active);
+}
+
+/* Control - color */
+body.download-pdf #download-pdf,
+body.download-svg #download-svg,
 body.dark #color-scheme-dark,
 body.light #color-scheme-light,
 body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
