--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -469,6 +469,7 @@ input[type='search']::-ms-reveal {
 
 /* Control - order */
 body.order-alphabetically #order-alpha,
+body.download-svg #download-svg,
 body.order-by-color #order-color,
 body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
