chore: fix links to issue templates in two places

--- a/public/index.pug
+++ b/public/index.pug
@@ -102,7 +102,7 @@ html(lang="en-US")
 
       ul(class="grid")
         li(class="grid-item--if-empty hidden" aria-hidden="true")
-          p Icon missing? #[a(href="https://github.com/simple-icons/simple-icons/issues/new?template=icon_request.md") Submit a request]
+          p Icon missing? #[a(href="https://github.com/simple-icons/simple-icons/issues/new?labels=new+icon&template=icon_request.yml&title=Request%3A+") Submit a request]
 
         //- This script adds an extra element after itself.
         script(
