added dynamic event handler to download icon link

--- a/public/index.pug
+++ b/public/index.pug
@@ -152,8 +152,8 @@ html(lang="en-US")
                 disabled
               ) ##{icon.hex}
               a(
-                class="download-svg grid-item__download-button grid-item__button"
-                href=`./icons/${icon.slug}.svg`
+                class="download-file grid-item__download-button grid-item__button"
+                href='#'
                 role="button"
                 data-icon=`${icon.slug}`
                 download
