Replace hover/focus of control elements for visibility
Replace the hover/focus styling of control elements from the same as the
active state to a style similar to the input field. This should help
distinguish the active button from the focussed/hovered button,
especially for keyboard users.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -407,10 +407,8 @@ body.no-js .control-field__title {
 }
 .control__button:not(:disabled):focus,
 .control__button:not(:disabled):hover {
-  background-color: var(--color-button-hover) !important;
-  border-color: var(--color-button-hover) !important;
+  box-shadow: 0 0 3px 0 var(--color-shadows);
   cursor: pointer;
-  fill: var(--color-background);
 }
 
 /* Control - disabled */
