--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -402,6 +402,11 @@ body.no-js .control-field__title {
   margin: 0 0.3rem;
   width: 2.4rem;
 }
+
+.control__button__download {
+  padding: 1px;
+}
+
 .control__button:first-of-type {
   margin-left: 0;
 }
@@ -463,9 +468,7 @@ input[type='search']::-ms-reveal {
 }
 
 /* Control - order */
-
 body.order-alphabetically #order-alpha,
-body.download-svg #download-svg,
 body.order-by-color #order-color,
 body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
@@ -486,9 +489,13 @@ body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
 }
 
+.download-type-file svg {
+  pointer-events: none;
+}
+
 /* Control - color */
-body.download-pdf #download-pdf,
-body.download-svg #download-svg,
+body.download-type-pdf #download-type-pdf,
+body.download-type-svg #download-type-svg,
 body.dark #color-scheme-dark,
 body.light #color-scheme-light,
 body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
