--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -468,9 +468,7 @@ input[type='search']::-ms-reveal {
 }
 
 /* Control - order */
-
 body.order-alphabetically #order-alpha,
-body.download-svg #download-svg,
 body.order-by-color #order-color,
 body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
@@ -491,9 +489,13 @@ body.order-by-relevance #order-relevance {
   background-color: var(--color-button-active);
 }
 
+.download-type-file svg {
+  pointer-events: none;
+}
+
 /* Control - color */
-body.download-pdf #download-pdf,
-body.download-svg #download-svg,
+body.download-type-pdf #download-type-pdf,
+body.download-type-svg #download-type-svg,
 body.dark #color-scheme-dark,
 body.light #color-scheme-light,
 body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
