refactored test and addressed other suggestions by Eric

--- a/public/index.pug
+++ b/public/index.pug
@@ -25,7 +25,7 @@ html(lang="en-US")
     link(rel="license" href="license.txt")
     link(rel="canonical" href=pageUrl)
 
-  body(class="no-js order-alphabetically download-svg")
+  body(class="no-js order-alphabetically download-type-svg")
     header(class="header")
       ul(class="header__list")
         li(class="header__list-item")
@@ -152,7 +152,7 @@ html(lang="en-US")
                 disabled
               ) ##{icon.hex}
               a(
-                class="download-file grid-item__download-button grid-item__button"
+                class="download-type-file grid-item__download-button grid-item__button"
                 href='#'
                 role="button"
                 data-icon=`${icon.slug}`
