addressing Eric's comments on the PR

--- a/public/index.pug
+++ b/public/index.pug
@@ -153,7 +153,7 @@ html(lang="en-US")
               ) ##{icon.hex}
               a(
                 class="download-type-file grid-item__download-button grid-item__button"
-                href='#'
+                href=`./icons/${icon.slug}.svg`
                 role="button"
                 data-icon=`${icon.slug}`
                 download
